--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/BrandLop/Code-Challenge/issues"
   },
-  "homepage": "https://github.com/BrandLop/Code-Challenge#readme"
+  "homepage": "https://github.com/BrandLop/Code-Challenge#readme",
+  "devDependencies": {
+    "jest": "^28.1.0",
+    "supertest": "^6.2.3"
+  }
 }
