--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "devDependencies": {
     "jest": "^28.1.0",
     "supertest": "^6.2.3"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
   }
 }
